# GoIT_PyCore_Project

./: .gitignore  LISCENCE  README.md  classes.py  commands.py  decorator.py  main.py  notes.py  notes_commands.py  notes_decorator.py  operations.py  parse_utils.py  pyproject.toml  sort_files.py
assistant_OZTeam/: README.md  pyproject.toml  setup.cfg
assistant_OZTeam/src/: assistant.py  classes.py  commands.py  decorator.py  notes.py  notes_commands.py  operations.py  parse_utils.py  sort_files.py
assistant_OZTeam/src/assistant_OZTeam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
src/: commands.py  decorator.py  exceptions.py  operations.py  Диаграмма без названия.drawio
src/assistant_OZTeam/: __init__.py  assistant.py  commands.py  decorator.py  notes_commands.py  operations.py  parse_utils.py  sort_files.py
src/assistant_OZTeam.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
